# tree.nvim

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTE.md  README.md  appveyor.yml  compile_commands.json  gen_api.py  install.sh  nvim_api.yaml
.circleci/: config.yml
cmake/: WinDeployQt.cmake
contrib/: appveyor.yml
include/: neovim.hpp  nvim.hpp  nvim_rpc.hpp  socket.hpp  util.h
include/impl/: neovim.hpp  nvim_rpc.hpp
runtime/autoload/: tree.vim
runtime/autoload/tree/: util.vim
runtime/lua/: tree.lua
runtime/lua/tree/: custom.lua  float.lua
runtime/plugin/: tree.vim
src/: CMakeLists.txt  client.cpp  deploy_test.sh  eg00.cpp  example.cpp  main.cpp  neovimconnector.cpp  neovimconnector.h  socket.cpp  util.cpp
src/app/: CMakeLists.txt  app.cpp  app.h  column.cpp  column.h  config.vim  dev.lua  dev.vim  float.lua  float.vim  install.sh  main.cpp  strnatcmp.hpp  transform.py  tree.cpp  tree.h  wcwidth.cpp
src/app/t/: test.lua
src/app/viml/autoload/: tree.vim
src/app/viml/autoload/tree/: custom.vim  exrename.vim  init.vim  util.vim
src/app/viml/doc/: tree.txt
src/app/viml/lua/: tree.lua
src/app/viml/plugin/: tree.vim
src/auto/: neovimapi6.cpp  neovimapi6.h
src/gui/: CMakeLists.txt  app.cpp  column.cpp  column.h  dev.vim  main.cpp  transform.py  tree.cpp  tree.h
src/gui/viml/autoload/: tree.vim
src/gui/viml/autoload/tree/: init.vim  util.vim
src/gui/viml/doc/: tree.txt
src/gui/viml/lua/: tree.lua
t/: test.lua
templates/: api.hpp  nvim.cpp  nvim.hpp
